--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'new' %>
+  <%= render 'static_pages/signed' %>
 <% else %>
-  <%= render 'signup' %>
+  <%= render 'static_pages/signup' %>
 <% end %>
